# ambit

./: .clang-format  .gitignore  .travis.yml  AmbitConfig.cmake.in  CMakeLists.txt  README.md  Tensor.files  Tensor.includes  index.html  params.json  setup  tensor.h
.github/workflows/: test.yml
cmake/: ConfigBoost.cmake  ConfigInfo.cmake  ConfigMPI.cmake  ConfigOMP.cmake  ConfigPython.cmake  ConfigSafeGuards.cmake  ConfigVersion.cmake  FindPythonLibsNew.cmake  FindTargetHDF5.cmake  FindTargetLAPACK.cmake  GenericMacros.cmake  Psi4Macros.cmake  ambitConfig.cmake.in  custom_cxxstandard.cmake
cmake/compilers/: ConfigCompilerFlags.cmake
cmake/math/: ConfigMath.cmake
doc/: Doxyfile
include/: CMakeLists.txt
include/ambit/: aligned.h  blocked_tensor.h  common_types.h  composite_tensor.h  print.h  settings.h  sym_blocked_tensor.h  symblocked_tensor.h  tensor.h  tensor_pool.h  timer.h
include/ambit/helpers/psi4/: convert.h  integrals.h  io.h
include/ambit/io/: file.h  hdf5.h  iwl.h  manager.h
include/ambit/io/hdf5/: attribute.h  dataset.h  dataspace.h  file.h  group.h  location.h  type.h
include/ambit/io/psi4/: file.h  io.h  iwl.h  manager.h
include/ambit/tensor/: indices.h
include/blocked_tensor/: blocked_tensor.h
include/tensor/: aligned.h  blocked_tensor.h  tensor.h
include/tensor/helpers/psi4/: io.h
include/tensor/io/: file.h  iwl.h  manager.h
lib/: CMakeLists.txt  np_test.py  test.py  test_blocks.py  test_operators.py  test_smoke.py
lib/ambit/: __init__.py  blocked_tensor.py  tensor.py  tensor_wrapper.py  test.py  wrapper.py
pyambit/: CMakeLists.txt  bindings.cc  np_test.py
samples/: CMakeLists.txt  example1.cc  example2.cc
src/: CMakeLists.txt  tensor.cc  tensorimpl.h
src/blocked_tensor/: blocked_tensor.cc  sym_blocked_tensor.cc
src/helpers/: README
src/helpers/psi4/: convert.cc  integrals.cc  io.cc
src/io/: file.cc  iwl.cc  manager.cc
src/io/hdf5/: attribute.cc  dataset.cc  dataspace.cc  file.cc  group.cc  location.cc
src/io/psi4/: file.cc  iwl.cc  manager.cc
src/math/: README  blas.cc  lapack.cc  math.h
src/python/: CMakeLists.txt  bindings.cc
src/tensor/: CMakeLists.txt  TODO  blocked_tensor.cc  composite_tensor.cc  core.cc  core.h  disk.cc  disk.h  globals.cc  globals.h  indices.cc  indices.h  labeled_tensor.cc  macros.h  memory.h  print.cc  slice.cc  slice.h  sliced_tensor.cc  tensor.cc  tensor_pool.cc  tensorimpl.cc  tensorimpl.h  timer.cc  timer.h
src/tensor/core/: core.cc  core.h
src/tensor/cyclops/: README  cyclops.cc  cyclops.h
src/tensor/disk/: disk.cc  disk.h
test/: CMakeLists.txt  test.32  test.33  test.34  test.35  test_block_dsrg_performance.cc  test_block_performance.cc  test_blocks.cc  test_core.cc  test_cyclops.cc  test_distributed.cc  test_dsrg_performance.cc  test_hdf5.cc  test_hf.cc  test_integrals.cc  test_io.cc  test_operators.cc  test_performance.cc  test_slice.cc  test_sym_blocks.cc  test_tblis.cc
